mid: 0000458 msg: S'ha revisat el rendiment del llistat de tasques i s'han millorat els processos de paginació.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@760 e3271b2b-fd41-4d56-bedf-4b5636213925